[package]
name = "elite_force_webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"
windows = "0.48.0"
serde_json = "1.0"
